Revise calibration function to make the random process autocorrelated

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -98,13 +98,7 @@
     "    \"cdr\": {\"name\": \"Case detection proportion\", \"lower\": 0.05, \"upper\": 0.4},\n",
     "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 15.0},\n",
     "}\n",
-    "params_df = pd.DataFrame(scalar_req).transpose()\n",
-    "proc_req = {\"name\": \"Random process values\", \"lower\": -2.0, \"upper\": 2.0}\n",
-    "\n",
-    "priors = {}\n",
-    "for k, v in scalar_req.items():\n",
-    "    priors[k] = dist.Uniform(v[\"lower\"], v[\"upper\"])\n",
-    "priors[\"proc\"] = dist.Uniform(np.repeat(proc_req[\"lower\"], n_process_periods), np.repeat(proc_req[\"upper\"], n_process_periods))"
+    "params_df = pd.DataFrame(scalar_req).transpose()"
    ]
   },
   {
@@ -120,11 +114,14 @@
     "    \"(constant through time) case detection proportion. \"\n",
     "\n",
     "def calib_model():\n",
-    "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
-    "    log_model_res = jnp.log(renewal_wrap(**param_updates))\n",
-    "    log_target = jnp.log(jnp.array(select_data))\n",
+    "    param_updates = {k: numpyro.sample(k, dist.Uniform(v[\"lower\"], v[\"upper\"])) for k, v in scalar_req.items()}\n",
+    "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.Uniform(0.0, 1.0))\n",
+    "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
+    "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
+    "    logmodel_res = jnp.log(renewal_wrap(**param_updates))\n",
+    "    logtarget = jnp.log(jnp.array(select_data))\n",
     "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
-    "    like = dist.Normal(log_model_res, dispersion).log_prob(log_target).sum()\n",
+    "    like = dist.Normal(logmodel_res, dispersion).log_prob(logtarget).sum()\n",
     "    numpyro.factor(\"notifications_ll\", like)"
    ]
   },
@@ -178,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr, dispersion):\n",
+    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed)\n",
     "\n",
     "full_wrap = jit(get_full_result)"
@@ -196,7 +193,8 @@
     "r_spagh = pd.DataFrame(columns=param_idx)\n",
     "proc_df = pd.DataFrame()\n",
     "for i, p in sample_params.iterrows():\n",
-    "    result = full_wrap(**p)\n",
+    "    params = {k: v for k, v in p.items() if \"dispersion\" not in k}\n",
+    "    result = full_wrap(**params)\n",
     "    cases_spagh[str(i)] = result.incidence * p[\"cdr\"]\n",
     "    suscept_spagh[str(i)] = result.suscept\n",
     "    r_spagh[str(i)] = result.r_t\n",
@@ -278,7 +276,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_df.loc[\"proc\", :] = proc_req\n",
     "params_df.columns = [\"name\", \"Lower limit\", \"Upper limit\"]\n",
     "params_df.index = params_df[\"name\"]\n",
     "params_df = params_df.drop(columns=[\"name\"])\n",
