Simplify import statements to notebook

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "#| warning: false\n",
-    "from jax import jit, random, vmap\n",
+    "from jax import jit, random\n",
     "from jax import numpy as jnp\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -35,17 +35,15 @@
     "import plotly.graph_objects as go\n",
     "from IPython.display import Markdown\n",
     "pd.options.plotting.backend = \"plotly\"\n",
-    "import plotly.express as px\n",
-    "colours = px.colors.qualitative.Plotly\n",
+    "from plotly.express.colors import qualitative as qual_colours\n",
     "\n",
     "from estival.sampling import tools as esamp\n",
-    "import summer2\n",
     "from summer2.utils import Epoch\n",
     "\n",
-    "from emu_renewal.process import sinterp, cosine_multicurve\n",
+    "from emu_renewal.process import sinterp\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import plot_spaghetti, get_area_from_df, plot_uncertainty_patches"
+    "from emu_renewal.outputs import plot_spaghetti, plot_uncertainty_patches"
    ]
   },
   {
@@ -246,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles, colours)\n",
+    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles, qual_colours.Plotly)\n",
     "patch_fig"
    ]
   },
