--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -57,12 +57,12 @@
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
-    "fixed_param_desc = \"### Fixed parameter values\\n \" \\\n",
-    "    f\"The target population is initialised as {str(int(pop))} susceptible persons. \" \\\n",
-    "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\"\n",
-    "analysis_start_time = datetime(2021, 3, 1)\n",
-    "analysis_end_time = datetime(2021, 11, 1)\n",
-    "select_data = mys_data.loc[analysis_start_time: analysis_end_time]"
+    "data_start = datetime(2021, 3, 1)\n",
+    "data_end = datetime(2021, 11, 1)\n",
+    "select_data = mys_data.loc[data_start: data_end]\n",
+    "analysis_start = data_start - timedelta(days=run_in)\n",
+    "analysis_end = data_end\n",
+    "epoch = Epoch(datetime(2019, 12, 31))"
    ]
   },
   {
@@ -71,11 +71,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = analysis_start_time - timedelta(days=run_in)\n",
-    "end = analysis_end_time\n",
-    "distri = JaxGammaDens()\n",
-    "epoch = Epoch(datetime(2019, 12, 31))\n",
-    "renew_model = JaxModel(33e6, start, end, run_in, 12, distri, 50, epoch, run_in)\n",
+    "fixed_param_desc = (\n",
+    "    \"### Fixed parameter values\\n \" \n",
+    "    f\"The target population is initialised as {str(int(pop))} susceptible persons. \" \n",
+    "    f\"The simulation runs for a run-in period of {run_in} days before \"\n",
+    "    \"comparison against the calibration data commences.\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renew_model = JaxModel(33e6, analysis_start, analysis_end, run_in, 12, JaxGammaDens(), 50, epoch, run_in)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
@@ -90,13 +100,13 @@
    "outputs": [],
    "source": [
     "# Define parameter ranges\n",
-    "scalar_req = {\n",
+    "params_dict = {\n",
     "    \"gen_mean\": {\"name\": \"Generation time mean (days)\", \"lower\": 5.0, \"upper\": 12.0},\n",
     "    \"gen_sd\": {\"name\": \"Generation time standard deviation (days)\", \"lower\": 2.0, \"upper\": 7.0},\n",
     "    \"cdr\": {\"name\": \"Case detection proportion\", \"lower\": 0.05, \"upper\": 0.4},\n",
     "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 15.0},\n",
     "}\n",
-    "params_df = pd.DataFrame(scalar_req).transpose()"
+    "params_df = pd.DataFrame(params_dict).transpose()"
    ]
   },
   {
@@ -105,14 +115,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib_desc = \"\\n\\n### Calibration targets\\nThe model described above was fit to the target data \" \\\n",
-    "    \"to minimise the density of the observed number of cases at each available data point \" \\\n",
-    "    \"from a normal distribution centred at the modelled notification rate. \" \\\n",
-    "    \"Modelled notifications are calculated as the product of modelled incidence and the \" \\\n",
+    "calib_desc = (\n",
+    "    \"\\n\\n### Calibration targets\\nThe model described above was fit to the target data \"\n",
+    "    \"to minimise the density of the observed number of cases at each available data point \"\n",
+    "    \"from a normal distribution centred at the modelled notification rate. \"\n",
+    "    \"Modelled notifications are calculated as the product of modelled incidence and the \"\n",
     "    \"(constant through time) case detection proportion. \"\n",
+    ")\n",
     "\n",
     "def calib_model():\n",
-    "    param_updates = {k: numpyro.sample(k, dist.Uniform(v[\"lower\"], v[\"upper\"])) for k, v in scalar_req.items()}\n",
+    "    param_updates = {k: numpyro.sample(k, dist.Uniform(v[\"lower\"], v[\"upper\"])) for k, v in params_dict.items()}\n",
     "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.Uniform(0.0, 1.0))\n",
     "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
     "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
