Sort out something weird that was happening with recalculating the process values

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -208,6 +208,7 @@
     "    cases_spagh[str(i)] = result.incidence * p[\"cdr\"]\n",
     "    suscept_spagh[str(i)] = result.suscept\n",
     "    r_spagh[str(i)] = result.r_t\n",
+    "    proc_df[str(i)] = result.\n",
     "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
     "    proc_df[str(i)] = renew_model.fit_process_curve(y_vals)\n",
     "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
@@ -248,6 +249,15 @@
     "titles = [\"cases\", \"susceptibles\", \"transmission potential\", \"R\"]\n",
     "margins = {m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}\n",
     "spagh_fig = plot_spaghetti(cases_spagh, select_data, proc_df, suscept_spagh, r_spagh, margins, titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spagh_fig"
    ]
   },
   {
