Apply times to all the re-calculated dataframes

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -208,14 +208,12 @@
     "    cases_spagh[str(i)] = result.incidence * p[\"cdr\"]\n",
     "    suscept_spagh[str(i)] = result.suscept\n",
     "    r_spagh[str(i)] = result.r_t\n",
-    "    proc_df[str(i)] = result.\n",
-    "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
-    "    proc_df[str(i)] = renew_model.fit_process_curve(y_vals)\n",
+    "    proc_df[str(i)] = result.process\n",
     "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
     "cases_spagh.index = times\n",
     "suscept_spagh.index = times\n",
     "r_spagh.index = times\n",
-    "proc_df.index = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
+    "proc_df.index = times\n",
     "case_quantiles = cases_spagh.quantile(centiles, axis=1).T\n",
     "suscept_quantiles = suscept_spagh.quantile(centiles, axis=1).T\n",
     "r_quantiles = r_spagh.quantile(centiles, axis=1).T\n",
