Reconcile some variablen naming in 05 notebook

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -43,7 +43,7 @@
     "from emu_renewal.process import sinterp\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import plot_spaghetti, plot_uncertainty_patches"
+    "from emu_renewal.outputs import get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "source": [
     "burn_in = 10\n",
     "n_samples = 100\n",
-    "centiles = [0.05, 0.5, 0.95]\n",
+    "quantiles = [0.05, 0.5, 0.95]\n",
     "idata_burnt = idata.sel(draw=slice(burn_in, None))\n",
     "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
     "sample_params = esamp.xarray_to_sampleiterator(idata_sampled)"
@@ -197,27 +197,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_idx = [str(i) for i in sample_params.index]\n",
-    "cases_spagh = pd.DataFrame(columns=param_idx)\n",
-    "suscept_spagh = pd.DataFrame(columns=param_idx)\n",
-    "r_spagh = pd.DataFrame(columns=param_idx)\n",
-    "proc_df = pd.DataFrame()\n",
+    "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
+    "cases_spagh = pd.DataFrame(index=times)\n",
+    "suscept_spagh = pd.DataFrame(index=times)\n",
+    "r_spagh = pd.DataFrame(index=times)\n",
+    "proc_spagh = pd.DataFrame(index=times)\n",
     "for i, p in sample_params.iterrows():\n",
     "    params = {k: v for k, v in p.items() if \"dispersion\" not in k}\n",
     "    result = full_wrap(**params)\n",
-    "    cases_spagh[str(i)] = result.incidence * p[\"cdr\"]\n",
-    "    suscept_spagh[str(i)] = result.suscept\n",
-    "    r_spagh[str(i)] = result.r_t\n",
-    "    proc_df[str(i)] = result.process\n",
-    "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
-    "cases_spagh.index = times\n",
-    "suscept_spagh.index = times\n",
-    "r_spagh.index = times\n",
-    "proc_df.index = times\n",
-    "case_quantiles = cases_spagh.quantile(centiles, axis=1).T\n",
-    "suscept_quantiles = suscept_spagh.quantile(centiles, axis=1).T\n",
-    "r_quantiles = r_spagh.quantile(centiles, axis=1).T\n",
-    "proc_quantiles = proc_df.quantile(centiles, axis=1).T"
+    "    run = str(i)\n",
+    "    cases_spagh[run] = result.incidence * p[\"cdr\"]\n",
+    "    suscept_spagh[run] = result.suscept\n",
+    "    r_spagh[run] = result.r_t\n",
+    "    proc_spagh[run] = result.process\n",
+    "case_quantiles = get_quantiles_from_spaghetti(cases_spagh, quantiles)\n",
+    "suscept_quantiles = get_quantiles_from_spaghetti(suscept_spagh, quantiles)\n",
+    "r_quantiles = get_quantiles_from_spaghetti(r_spagh, quantiles)\n",
+    "proc_quantiles = get_quantiles_from_spaghetti(proc_spagh, quantiles)"
    ]
   },
   {
@@ -246,7 +242,7 @@
    "source": [
     "titles = [\"cases\", \"susceptibles\", \"transmission potential\", \"R\"]\n",
     "margins = {m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}\n",
-    "spagh_fig = plot_spaghetti(cases_spagh, select_data, proc_df, suscept_spagh, r_spagh, margins, titles)"
+    "spagh_fig = plot_spaghetti(cases_spagh, select_data, proc_spagh, suscept_spagh, r_spagh, margins, titles)"
    ]
   },
   {
