Add function to wrangle date format for markdown

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -71,12 +71,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def format_date_for_str(date):\n",
+    "    ordinal = {1: \"st\", 2: \"nd\", 3: \"rd\"}.get(date.day % 10, \"th\")\n",
+    "    return date.strftime(f\"%-d{ordinal} %B %Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fixed_param_desc = (\n",
     "    \"### Fixed parameter values\\n \" \n",
     "    f\"The target population is initialised as {str(int(pop))} susceptible persons. \" \n",
-    "    f\"The simulation runs for a run-in period of {run_in} days before \"\n",
+    "    f\"The simulation runs from {format_date_for_str(analysis_start)} \"\n",
+    "    f\"to {format_date_for_str(analysis_end)}. \"\n",
+    "    f\"with a run-in period of {run_in} days before \"\n",
     "    \"comparison against the calibration data commences.\\n\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(fixed_param_desc)"
    ]
   },
   {
