Tidy up some markdown sections from notebook

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -43,7 +43,8 @@
     "from emu_renewal.process import sinterp\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches"
+    "from emu_renewal.outputs import get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches\n",
+    "from emu_renewal.utils import format_date_for_str"
    ]
   },
   {
@@ -52,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify fixed parameters and get calibration data\n",
     "run_in = 30\n",
     "n_process_periods = 12\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
@@ -62,43 +64,15 @@
     "select_data = mys_data.loc[data_start: data_end]\n",
     "analysis_start = data_start - timedelta(days=run_in)\n",
     "analysis_end = data_end\n",
-    "epoch = Epoch(datetime(2019, 12, 31))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_date_for_str(date):\n",
-    "    ordinal = {1: \"st\", 2: \"nd\", 3: \"rd\"}.get(date.day % 10, \"th\")\n",
-    "    return date.strftime(f\"%-d{ordinal} %B %Y\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "epoch = Epoch(datetime(2019, 12, 31))\n",
     "fixed_param_desc = (\n",
     "    \"### Fixed parameter values\\n \" \n",
     "    f\"The target population is initialised as {str(int(pop))} susceptible persons. \" \n",
-    "    f\"The simulation runs from {format_date_for_str(analysis_start)} \"\n",
-    "    f\"to {format_date_for_str(analysis_end)}. \"\n",
+    "    f\"The simulation runs from the {format_date_for_str(analysis_start)} \"\n",
+    "    f\"to the {format_date_for_str(analysis_end)}. \"\n",
     "    f\"with a run-in period of {run_in} days before \"\n",
     "    \"comparison against the calibration data commences.\\n\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Markdown(fixed_param_desc)"
    ]
   },
   {
@@ -155,15 +129,6 @@
     "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
     "    like = dist.Normal(logmodel_res, dispersion).log_prob(logtarget).sum()\n",
     "    numpyro.factor(\"notifications_ll\", like)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Markdown(calib_desc)"
    ]
   },
   {
@@ -244,15 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(fixed_param_desc) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Markdown(fixed_param_desc)\n",
     "Markdown(calib_desc)"
    ]
   },
@@ -264,16 +221,7 @@
    "source": [
     "titles = [\"cases\", \"susceptibles\", \"transmission potential\", \"R\"]\n",
     "margins = {m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}\n",
-    "spagh_fig = plot_spaghetti(cases_spagh, select_data, proc_spagh, suscept_spagh, r_spagh, margins, titles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spagh_fig"
+    "plot_spaghetti(cases_spagh, select_data, proc_spagh, suscept_spagh, r_spagh, margins, titles)"
    ]
   },
   {
