Adjust date format for markdown

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -184,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get data for each output and parameter set\n",
     "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
     "cases_spagh = pd.DataFrame(index=times)\n",
     "suscept_spagh = pd.DataFrame(index=times)\n",
@@ -197,6 +198,8 @@
     "    suscept_spagh[run] = result.suscept\n",
     "    r_spagh[run] = result.r_t\n",
     "    proc_spagh[run] = result.process\n",
+    "\n",
+    "# Calculate quantiles from spaghetti\n",
     "case_quantiles = get_quantiles_from_spaghetti(cases_spagh, quantiles)\n",
     "suscept_quantiles = get_quantiles_from_spaghetti(suscept_spagh, quantiles)\n",
     "r_quantiles = get_quantiles_from_spaghetti(r_spagh, quantiles)\n",
