Improve consistency of order of outputs

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -222,9 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles = [\"cases\", \"susceptibles\", \"transmission potential\", \"R\"]\n",
-    "margins = {m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}\n",
-    "plot_spaghetti(cases_spagh, select_data, proc_spagh, suscept_spagh, r_spagh, margins, titles)"
+    "plot_spaghetti(cases_spagh, select_data, suscept_spagh, r_spagh, proc_spagh)"
    ]
   },
   {
@@ -233,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles, qual_colours.Plotly)\n",
+    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, suscept_quantiles, r_quantiles, proc_quantiles, qual_colours.Plotly)\n",
     "patch_fig"
    ]
   },
