Shift to frequency of process updates rather than number of periods

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Specify fixed parameters and get calibration data\n",
     "run_in = 30\n",
-    "n_process_periods = 12\n",
+    "proc_update_freq = 7\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = JaxModel(33e6, analysis_start, analysis_end, run_in, 12, JaxGammaDens(), 50, epoch, run_in)\n",
+    "renew_model = JaxModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, epoch, run_in)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
@@ -122,6 +122,7 @@
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, dist.Uniform(v[\"lower\"], v[\"upper\"])) for k, v in params_dict.items()}\n",
     "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.Uniform(0.0, 1.0))\n",
+    "    n_process_periods = (analysis_end - analysis_start).days // proc_update_freq + 1\n",
     "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
     "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
     "    logmodel_res = jnp.log(renewal_wrap(**param_updates))\n",
