Filter results to target data

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -111,6 +111,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_filtered_data = select_data[::2]\n",
+    "model_indices = [float(i) for i in renew_model.model_times]\n",
+    "data_indices = renew_model.epoch.datetime_to_number(test_filtered_data.index)\n",
+    "common_indices = [i for i in model_indices if i in data_indices]\n",
+    "out_indices = [i for i, j in enumerate(renew_model.model_times) if j in common_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "calib_desc = (\n",
     "    \"\\n\\n### Calibration targets\\nThe model described above was fit to the target data \"\n",
     "    \"to minimise the density of the observed number of cases at each available data point \"\n",
@@ -122,11 +135,12 @@
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, dist.Uniform(v[\"lower\"], v[\"upper\"])) for k, v in params_dict.items()}\n",
     "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.Uniform(0.0, 1.0))\n",
-    "    n_process_periods = (analysis_end - analysis_start).days // proc_update_freq + 1\n",
+    "    n_process_periods = -((analysis_end - analysis_start).days // -proc_update_freq)\n",
     "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
     "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
-    "    logmodel_res = jnp.log(renewal_wrap(**param_updates))\n",
-    "    logtarget = jnp.log(jnp.array(select_data))\n",
+    "    model_result = [renewal_wrap(**param_updates)[i] for i in out_indices]\n",
+    "    logmodel_res = jnp.log(model_result)\n",
+    "    logtarget = jnp.log(jnp.array(test_filtered_data))\n",
     "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
     "    like = dist.Normal(logmodel_res, dispersion).log_prob(logtarget).sum()\n",
     "    numpyro.factor(\"notifications_ll\", like)"
