Explain code in comments

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -111,11 +111,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_filtered_data = select_data[::2]\n",
-    "model_indices = [float(i) for i in renew_model.model_times]\n",
+    "test_filtered_data = select_data[::2]  # Arbitrary filer applied to data\n",
     "data_indices = renew_model.epoch.datetime_to_number(test_filtered_data.index)\n",
+    "model_indices = [float(i) for i in renew_model.model_times]  # Using float because that's what datetime_to_number gives\n",
     "common_indices = [i for i in model_indices if i in data_indices]\n",
-    "out_indices = [i for i, j in enumerate(renew_model.model_times) if j in common_indices]"
+    "data_mask = [i for i, j in enumerate(renew_model.model_times) if j in common_indices]"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "    n_process_periods = -((analysis_end - analysis_start).days // -proc_update_freq)\n",
     "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
     "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
-    "    model_result = [renewal_wrap(**param_updates)[i] for i in out_indices]\n",
+    "    model_result = jnp.array([renewal_wrap(**param_updates)[i] for i in data_mask])\n",
     "    logmodel_res = jnp.log(model_result)\n",
     "    logtarget = jnp.log(jnp.array(test_filtered_data))\n",
     "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
