Change process dispersion parameter to half normal distribution

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -121,8 +121,8 @@
     "\n",
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, dist.Uniform(v[\"lower\"], v[\"upper\"])) for k, v in params_dict.items()}\n",
-    "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.Uniform(0.0, 1.0))\n",
-    "    n_process_periods = (analysis_end - analysis_start).days // proc_update_freq + 1\n",
+    "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.HalfNormal(1.0))\n",
+    "    n_process_periods = len(renew_model.x_proc_data.points)\n",
     "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
     "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
     "    logmodel_res = jnp.log(renewal_wrap(**param_updates))\n",
@@ -205,6 +205,24 @@
     "suscept_quantiles = get_quantiles_from_spaghetti(suscept_spagh, quantiles)\n",
     "r_quantiles = get_quantiles_from_spaghetti(r_spagh, quantiles)\n",
     "proc_quantiles = get_quantiles_from_spaghetti(proc_spagh, quantiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(analysis_end - analysis_start).days // proc_update_freq + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(renew_model.x_proc_data[0])"
    ]
   },
   {
