Use multiindex to simplify outputs wrangling

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -43,7 +43,7 @@
     "from emu_renewal.process import sinterp\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches\n",
+    "from emu_renewal.outputs import get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
     "from emu_renewal.utils import format_date_for_str"
    ]
   },
@@ -185,44 +185,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get data for each output and parameter set\n",
-    "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
-    "cases_spagh = pd.DataFrame(index=times)\n",
-    "suscept_spagh = pd.DataFrame(index=times)\n",
-    "r_spagh = pd.DataFrame(index=times)\n",
-    "proc_spagh = pd.DataFrame(index=times)\n",
+    "column_names = pd.MultiIndex.from_product([PANEL_SUBTITLES, sample_params.index.map(str)])\n",
+    "spaghetti = pd.DataFrame(index=renew_model.epoch.index_to_dti(renew_model.model_times), columns=column_names)\n",
     "for i, p in sample_params.iterrows():\n",
     "    params = {k: v for k, v in p.items() if \"dispersion\" not in k}\n",
     "    result = full_wrap(**params)\n",
-    "    run = str(i)\n",
-    "    cases_spagh[run] = result.incidence * p[\"cdr\"]\n",
-    "    suscept_spagh[run] = result.suscept\n",
-    "    r_spagh[run] = result.r_t\n",
-    "    proc_spagh[run] = result.process\n",
-    "\n",
+    "    spaghetti.loc[:, (\"cases\", str(i))] = result.incidence * p[\"cdr\"]\n",
+    "    spaghetti.loc[:, (\"suscept\", str(i))] = result.suscept\n",
+    "    spaghetti.loc[:, (\"R\", str(i))] = result.r_t\n",
+    "    spaghetti.loc[:, (\"transmission potential\", str(i))] = result.process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Calculate quantiles from spaghetti\n",
-    "case_quantiles = get_quantiles_from_spaghetti(cases_spagh, quantiles)\n",
-    "suscept_quantiles = get_quantiles_from_spaghetti(suscept_spagh, quantiles)\n",
-    "r_quantiles = get_quantiles_from_spaghetti(r_spagh, quantiles)\n",
-    "proc_quantiles = get_quantiles_from_spaghetti(proc_spagh, quantiles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(analysis_end - analysis_start).days // proc_update_freq + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(renew_model.x_proc_data[0])"
+    "case_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"cases\"], quantiles)\n",
+    "suscept_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"suscept\"], quantiles)\n",
+    "r_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"R\"], quantiles)\n",
+    "proc_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"transmission potential\"], quantiles)"
    ]
   },
   {
