Convert spaghetti creation to function

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -43,7 +43,7 @@
     "from emu_renewal.process import sinterp\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
+    "from emu_renewal.outputs import get_spaghetti_from_params, get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
     "from emu_renewal.utils import format_date_for_str"
    ]
   },
@@ -185,15 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_names = pd.MultiIndex.from_product([PANEL_SUBTITLES, sample_params.index.map(str)])\n",
-    "spaghetti = pd.DataFrame(index=renew_model.epoch.index_to_dti(renew_model.model_times), columns=column_names)\n",
-    "for i, p in sample_params.iterrows():\n",
-    "    params = {k: v for k, v in p.items() if \"dispersion\" not in k}\n",
-    "    result = full_wrap(**params)\n",
-    "    spaghetti.loc[:, (\"cases\", str(i))] = result.incidence * p[\"cdr\"]\n",
-    "    spaghetti.loc[:, (\"suscept\", str(i))] = result.suscept\n",
-    "    spaghetti.loc[:, (\"R\", str(i))] = result.r_t\n",
-    "    spaghetti.loc[:, (\"transmission potential\", str(i))] = result.process"
+    "spaghetti = get_spaghetti_from_params(renew_model, sample_params)"
    ]
   },
   {
@@ -204,7 +196,7 @@
    "source": [
     "# Calculate quantiles from spaghetti\n",
     "case_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"cases\"], quantiles)\n",
-    "suscept_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"suscept\"], quantiles)\n",
+    "suscept_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"susceptibles\"], quantiles)\n",
     "r_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"R\"], quantiles)\n",
     "proc_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"transmission potential\"], quantiles)"
    ]
@@ -225,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_spaghetti(cases_spagh, select_data, suscept_spagh, r_spagh, proc_spagh)"
+    "plot_spaghetti(spaghetti[\"cases\"], select_data, spaghetti[\"susceptibles\"], spaghetti[\"R\"], spaghetti[\"transmission potential\"])"
    ]
   },
   {
