Use loops to simplify plotting code

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -43,7 +43,7 @@
     "from emu_renewal.process import sinterp\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import get_spaghetti_from_params, get_quantiles_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
+    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
     "from emu_renewal.utils import format_date_for_str"
    ]
   },
@@ -176,29 +176,9 @@
     "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed)\n",
     "\n",
-    "full_wrap = jit(get_full_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spaghetti = get_spaghetti_from_params(renew_model, sample_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate quantiles from spaghetti\n",
-    "case_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"cases\"], quantiles)\n",
-    "suscept_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"susceptibles\"], quantiles)\n",
-    "r_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"R\"], quantiles)\n",
-    "proc_quantiles = get_quantiles_from_spaghetti(spaghetti.loc[:, \"transmission potential\"], quantiles)"
+    "full_wrap = jit(get_full_result)\n",
+    "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
+    "quantiles_df = get_quant_df_from_spaghetti(renew_model, spaghetti, quantiles)"
    ]
   },
   {
@@ -217,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_spaghetti(spaghetti[\"cases\"], select_data, spaghetti[\"susceptibles\"], spaghetti[\"R\"], spaghetti[\"transmission potential\"])"
+    "plot_spaghetti(spaghetti, select_data)"
    ]
   },
   {
@@ -226,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, suscept_quantiles, r_quantiles, proc_quantiles, qual_colours.Plotly)\n",
+    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
     "patch_fig"
    ]
   },
