Not much progress on reconciling jax with non-jax models

--- a/renew/04-compare-jax.ipynb
+++ b/renew/04-compare-jax.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reasonable parameter values for Malaysia data from previous calibration\n",
+    "# Reasonable parameter values for Malaysia data from a previous calibration\n",
     "gen_time_mean = 8.9744\n",
     "gen_time_sd = 5.4449\n",
     "proc_vals = np.array([0.1130, -0.7540, -0.0427, -0.0868, 0.3491, 0.4198, 0.2779, 0.4796, 0.1858, 0.389, 0.2204, 0.0243])\n",
@@ -47,8 +47,9 @@
    "outputs": [],
    "source": [
     "window_len = 50\n",
-    "j = JaxModel(33e6, 50, 326, 30, 12, JaxGammaDens(), window_len)\n",
-    "m = RenewalModel(33e6, 276, 30, 12)\n",
+    "j = JaxModel(33e6, 0, 276, 30, 23, JaxGammaDens(), window_len, 30, 30)\n",
+    "proc_vals = np.append(proc_vals, [0.0])\n",
+    "m = RenewalModel(33e6, 276, 30, 13)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
     "    return j.func(gen_mean, gen_sd, proc, seed)"
@@ -70,7 +71,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\"original\": incidence_m, \"jax\": incidence_j}).plot()"
+    "pd.Series(incidence_j).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.Series(incidence_m).plot()"
    ]
   }
  ],
