--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Specify fixed parameters and get calibration data\n",
-    "run_in = 30\n",
+    "run_in = 27\n",
     "proc_update_freq = 14\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = JaxModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, run_in, epoch)\n",
+    "renew_model = JaxModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, epoch)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
@@ -159,6 +159,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "az.summary(idata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "burn_in = 10\n",
     "n_samples = 100\n",
     "quantiles = [0.05, 0.5, 0.95]\n",
@@ -198,6 +207,16 @@
    "outputs": [],
    "source": [
     "plot_spaghetti(spaghetti, select_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
+    "patch_fig"
    ]
   },
   {
@@ -279,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
