Delete non-jax model and associated code

--- a/renew/05-calibration.ipynb
+++ b/renew/05-calibration.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "from emu_renewal.process import sinterp\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
-    "from emu_renewal.renew import JaxModel\n",
+    "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
     "from emu_renewal.utils import format_date_for_str"
    ]
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = JaxModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, run_in, epoch)\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, run_in, epoch)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
