--- a/renew/05-calibration.ipynb
+++ b/renew/05-calibration.ipynb
@@ -59,11 +59,9 @@
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
-    "data_start = datetime(2021, 3, 1)\n",
-    "data_end = datetime(2021, 11, 1)\n",
-    "select_data = mys_data.loc[data_start: data_end]\n",
-    "analysis_start = data_start - timedelta(days=run_in)\n",
-    "analysis_end = data_end\n",
+    "analysis_start = datetime(2021, 3, 1)\n",
+    "analysis_end = datetime(2021, 11, 1)\n",
+    "select_data = mys_data.loc[analysis_start: analysis_end]\n",
     "epoch = Epoch(datetime(2019, 12, 31))\n",
     "fixed_param_desc = (\n",
     "    \"### Fixed parameter values\\n \" \n",
@@ -81,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, run_in, epoch)\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, epoch)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
