--- a/renew/05-calibration.ipynb
+++ b/renew/05-calibration.ipynb
@@ -62,15 +62,7 @@
     "analysis_start = datetime(2021, 3, 1)\n",
     "analysis_end = datetime(2021, 11, 1)\n",
     "select_data = mys_data.loc[analysis_start: analysis_end]\n",
-    "epoch = Epoch(datetime(2019, 12, 31))\n",
-    "fixed_param_desc = (\n",
-    "    \"### Fixed parameter values\\n \" \n",
-    "    f\"The target population is initialised as {str(int(pop))} susceptible persons. \" \n",
-    "    f\"The simulation runs from the {format_date_for_str(analysis_start)} \"\n",
-    "    f\"to the {format_date_for_str(analysis_end)}. \"\n",
-    "    f\"with a run-in period of {run_in} days before \"\n",
-    "    \"comparison against the calibration data commences.\\n\"\n",
-    ")"
+    "epoch = Epoch(datetime(2019, 12, 31))"
    ]
   },
   {
@@ -136,6 +128,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Markdown(renew_model.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "kernel = numpyro.infer.NUTS(calib_model, dense_mass=True)\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
@@ -185,7 +186,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(fixed_param_desc)\n",
     "Markdown(calib_desc)"
    ]
   },
