Update rest of renewal function documentation, delete unused distribution code

--- a/renew/05-calibration.ipynb
+++ b/renew/05-calibration.ipynb
@@ -41,7 +41,7 @@
     "from summer2.utils import Epoch\n",
     "\n",
     "from emu_renewal.process import sinterp\n",
-    "from emu_renewal.distributions import JaxGammaDens\n",
+    "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
     "from emu_renewal.utils import format_date_for_str"
@@ -71,10 +71,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, JaxGammaDens(), 50, epoch)\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, GammaDens(), 50, epoch)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
     "\n",
     "renewal_wrap = jit(get_inc_result)"
    ]
@@ -163,12 +163,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sample_params.iloc[0][\"gen_mean\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.func(gen_mean, gen_sd, proc, seed)\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
     "quantiles_df = get_quant_df_from_spaghetti(renew_model, spaghetti, quantiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(renew_model.get_description())"
    ]
   },
   {
