--- a/renew/05-calibration.ipynb
+++ b/renew/05-calibration.ipynb
@@ -40,11 +40,10 @@
     "from estival.sampling import tools as esamp\n",
     "from summer2.utils import Epoch\n",
     "\n",
-    "from emu_renewal.process import sinterp\n",
+    "from emu_renewal.process import CosineMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
-    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
-    "from emu_renewal.utils import format_date_for_str"
+    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES"
    ]
   },
   {
@@ -71,7 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, GammaDens(), 50, epoch)\n",
+    "fitter = CosineMultiCurve()\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50, epoch)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
